# c2pa-test-tool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
rubrics/: asset-rubric-conformance0.1-spec2.2.yml  asset-rubric-conformance0.2-spec2.2.yml  asset-rubric-conformance0.2-spec2.4.yml  asset-rubric-integrity.yml  asset-rubric-signals-local.yml
schemas/: test-case-description.md  test-case.schema.json
scripts/: convert_to_yaml.py
src/: batch.rs  lib.rs  main.rs  processing.rs  profile.rs  test_case.rs  validation.rs
testfiles-creation/: n-actions-created-gathered.json  n-actions-created-gathered.yaml  n-actions-created-nodst.json  n-actions-created-nodst.yaml  n-actions-inception-multiple.json  n-actions-inception-multiple.yaml  n-actions-inception.json  n-actions-inception.yaml  n-actions-opened.json  n-actions-opened.yaml  n-actions-placed-parent.json  n-actions-placed-parent.yaml  n-actions-placed.json  n-actions-placed.yaml  n-actions-redacted-bad-reason.json  n-actions-redacted-bad-reason.yaml  n-actions-redacted-bad-uri.json  n-actions-redacted-bad-uri.yaml  n-actions-redacted-no-reason.json  n-actions-redacted-no-reason.yaml  n-actions-redacted.json  n-actions-redacted.yaml  n-actions-removed-same-manifest.json  n-actions-removed-same-manifest.yaml  n-actions-removed.json  n-actions-removed.yaml  n-actions-softwareAgent-and-index.json  n-actions-softwareAgent-and-index.yaml  n-actions-softwareAgent-missing.json  n-actions-softwareAgent-missing.yaml  n-actions-translated.json  n-actions-translated.yaml  n-actions-watermarked-bound.json  n-actions-watermarked-bound.yaml  p-actions-changes-spatial.json  p-actions-changes-spatial.yaml  p-actions-created-filtered.json  p-actions-created-filtered.yaml  (+44 more)
(+18 files in other folders)
