[package]
name = "c2pa-test-tool"
version = "0.4.0"
edition = "2021"
authors = ["Leonard Rosenthol"]
description = "C2PA Test Tool - Create test assets, validate assets, and evaluate profiles for C2PA Content Credentials"
license = "Apache-2.0"
repository = "https://github.com/lrosenthol/c2pa-test-tool"
keywords = ["c2pa", "content-authenticity", "provenance", "media", "testing"]
categories = ["multimedia"]

[lib]
name = "crtool"
path = "src/lib.rs"

[[bin]]
name = "c2pa-test-tool"
path = "src/main.rs"

[features]

[dependencies]
c2pa = { path = "../c2pa-rs/sdk", features = ["file_io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
profile_evaluator_rs = { path = "../profile-evaluator-rs" }
tempfile = "3"
ed25519-dalek = "2.2"
pem = "3.0"
x509-parser = "0.16"
p256 = { version = "0.13", features = ["pkcs8"] }
rsa = { version = "0.9", features = ["sha2"] }
image = { version = "0.25", default-features = false, features = [
	"jpeg",
	"png",
	"gif",
	"bmp",
	"tiff",
	"webp",
] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = [
	"jpeg",
	"png",
	"gif",
	"bmp",
	"tiff",
	"webp",
] }

[[test]]
name = "integration_tests"
path = "tests/src/integration_tests.rs"

[[test]]
name = "test_profile_evaluation"
path = "tests/src/test_profile_evaluation.rs"

[[test]]
name = "test_creation"
path = "tests/src/test_creation.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
